samples/_failures_safe/1761396995_81b548_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca02add4.c: In function ‘main’:
./samples/SAFE/__tmp_ca02add4.c:162:5: error: ‘cleanup’ undeclared (first use in this function)
  162 |     cleanup
      |     ^~~~~~~
./samples/SAFE/__tmp_ca02add4.c:162:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ca02add4.c:162:12: error: expected ‘;’ at end of input
  162 |     cleanup
      |            ^
      |            ;
./samples/SAFE/__tmp_ca02add4.c:162:5: error: expected declaration or statement at end of input
  162 |     cleanup
      |     ^~~~~~~
